<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <ScrollView
        android:layout_above="@id/control"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >
        <RelativeLayout
            android:id="@+id/scroll_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        >
            <com.dpcsa.compon.custom_components.ComponImageView
                android:id="@+id/photo"
                android:layout_marginTop="@dimen/dim_12"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="centerCrop"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/_txt_inp_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/_txt_inp_phone"
                android:layout_marginLeft="@dimen/dim_12"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/dim_12"
                app:hintTextAppearance="@style/txtInpt_12_21">
                <com.dpcsa.compon.custom_components.ComponEditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/editStyle_21_2"
                    android:imeOptions="actionNext"
                    app:textError="@string/sup_login_error"
                    app:minLength="5"
                    android:inputType="text"
                    android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/_txt_inp_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/_txt_inp_login"
                android:layout_marginLeft="@dimen/dim_12"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/dim_12"
                app:hintTextAppearance="@style/txtInpt_12_21">
                <com.dpcsa.compon.custom_components.ComponEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/editStyle_21_2"
                    android:hint="Password"
                    android:imeOptions="actionNext"
                    app:textError="@string/sup_password_error"
                    app:isPassword="true"
                    app:validPassword="aA0"
                    app:idShowPassword="@id/p_vv"
                    app:idHidePassword="@id/p_no"
                    app:equalsId="@id/equ"
                    android:maxLines="1"
                    app:minLength="5"
                    android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/_txt_inp_f_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/photo"
                android:layout_marginLeft="@dimen/dim_12"
                android:layout_marginTop="@dimen/dim_24"
                android:layout_marginRight="@dimen/dim_12"
                app:hintTextAppearance="@style/txtInpt_12_21">
                <com.dpcsa.compon.custom_components.ComponEditText
                    android:id="@+id/f_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/editStyle_21_2"
                    android:hint="First name"
                    android:imeOptions="actionNext"
                    android:maxLength="30"
                    app:textError="@string/sup_f_name_error"
                    app:minLength="2"
                    android:inputType="text"
                    android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/_txt_inp_l_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/_txt_inp_f_name"
                android:layout_marginLeft="@dimen/dim_12"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/dim_12"
                app:hintTextAppearance="@style/txtInpt_12_21">
                <com.dpcsa.compon.custom_components.ComponEditText
                    android:id="@+id/l_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/editStyle_21_2"
                    android:hint="Last name"
                    android:imeOptions="actionNext"
                    app:textError="@string/sup_l_name_error"
                    app:minLength="2"
                    android:inputType="text"
                    android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/_txt_inp_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/_txt_inp_l_name"
                android:layout_marginLeft="@dimen/dim_12"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/dim_12"
                app:hintTextAppearance="@style/txtInpt_12_21">
                <com.dpcsa.compon.custom_components.ComponEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:imeOptions="actionNext"
                    app:textError="@string/sup_email_error"
                    app:typeValidate="email"
                    android:maxLines="1"
                    android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/_txt_inp_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/_txt_inp_email"
                android:layout_marginLeft="@dimen/dim_12"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/dim_12"
                app:hintTextAppearance="@style/txtInpt_12_21">
                <com.dpcsa.compon.custom_components.EditTextMask
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/editStyle_21_2"
                    android:hint="Phone"
                    android:imeOptions="actionNext"
                    app:mask="+380 __ ___ ____"
                    android:maxLines="1"
                    android:inputType="phone"/>
                </com.google.android.material.textfield.TextInputLayout>

            <com.dpcsa.compon.custom_components.ComponImageView
                android:id="@+id/cam"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="95dp"
                android:layout_width="@dimen/dim_56"
                android:layout_height="@dimen/dim_56"
                android:src="@drawable/_camera_alt_ff007eed"
                android:scaleType="centerCrop"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/_txt_inp_equ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/_txt_inp_password"
                android:layout_marginLeft="@dimen/dim_12"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/dim_12"
                app:hintTextAppearance="@style/txtInpt_12_21">
                <com.dpcsa.compon.custom_components.ComponEditText
                    android:id="@+id/equ"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/editStyle_21_2"
                    android:hint="Repeat password"
                    android:imeOptions="actionNext"
                    app:textError="@string/sup_equ_error"
                    app:isPassword="true"
                    app:idShowPassword="@id/eq_vv"
                    app:idHidePassword="@id/eq_no"
                    android:maxLines="1"
                    android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

            <com.dpcsa.compon.custom_components.ComponImageView
                android:id="@+id/p_vv"
                android:layout_alignParentRight="true"
                android:layout_below="@id/_txt_inp_login"
                android:layout_marginLeft="@dimen/dim_14"
                android:layout_marginTop="@dimen/dim_12"
                android:layout_marginRight="@dimen/dim_14"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="@dimen/dim_8"
                android:src="@drawable/_visibility_ff000000"
                android:scaleType="centerCrop"
                />

            <com.dpcsa.compon.custom_components.ComponImageView
                android:id="@+id/p_no"
                android:layout_alignParentRight="true"
                android:layout_below="@id/_txt_inp_login"
                android:layout_marginTop="@dimen/dim_12"
                android:layout_marginRight="@dimen/dim_14"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="@dimen/dim_8"
                android:src="@drawable/_visibility_off_ff000000"
                android:scaleType="centerCrop"
                />

            <com.dpcsa.compon.custom_components.ComponImageView
                android:id="@+id/eq_vv"
                android:layout_alignParentRight="true"
                android:layout_below="@id/_txt_inp_password"
                android:layout_marginTop="@dimen/dim_12"
                android:layout_marginRight="@dimen/dim_14"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="@dimen/dim_8"
                android:src="@drawable/_visibility_ff000000"
                android:scaleType="centerCrop"
                />

            <com.dpcsa.compon.custom_components.ComponImageView
                android:id="@+id/eq_no"
                android:layout_alignParentRight="true"
                android:layout_below="@id/_txt_inp_password"
                android:layout_marginTop="@dimen/dim_12"
                android:layout_marginRight="@dimen/dim_14"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:padding="@dimen/dim_8"
                android:src="@drawable/_visibility_off_ff000000"
                android:scaleType="centerCrop"
                />

        </RelativeLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/control"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="61dp"
    >
        <TextView
            android:id="@+id/send"
            android:layout_centerInParent="true"
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:background="@drawable/shape_1000"
            android:gravity="center"
            android:text="Send"
            android:textSize="@dimen/dim_24"
            android:textColor="@color/white"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey"
            />

    </RelativeLayout>
</RelativeLayout>